[gd_scene load_steps=4 format=3 uid="uid://clq4ka7pgcrwc"]

[ext_resource type="StyleBox" uid="uid://ba3qtx7a1wpos" path="res://addons/TreeSpeak/resources/styles/style_dialogue_node_player.tres" id="1_olua3"]
[ext_resource type="Script" path="res://addons/TreeSpeak/scripts/editor/DialoguePlayerNode.gd" id="2_jnhdi"]
[ext_resource type="PackedScene" uid="uid://ra2pgtnf1bfk" path="res://addons/TreeSpeak/components/dialogue_option.tscn" id="3_oxdoe"]

[node name="DialoguePlayerNode" type="GraphNode"]
offset_right = 230.0
offset_bottom = 86.0
size_flags_vertical = 0
mouse_filter = 1
theme_override_constants/separation = 10
theme_override_constants/port_h_offset = -10
theme_override_styles/titlebar = ExtResource("1_olua3")
resizable = true
title = "PLAYER"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("2_jnhdi")

[node name="DialogueOption" parent="." instance=ExtResource("3_oxdoe")]
layout_mode = 2

[node name="ButtonAddOption" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Option"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
initial_position = 2
ok_button_text = "Yes"
dialog_text = "Delete this node?"
cancel_button_text = "No"

[connection signal="removed_clicked" from="DialogueOption" to="." method="remove_slot"]
[connection signal="text_updated" from="DialogueOption" to="." method="_on_option_text_updated"]
[connection signal="pressed" from="ButtonAddOption" to="." method="add_option"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="delete"]
